pkg/front_end/testcases/expression/missing_variable_types.expression.yaml.expect
Errors: {
  org-dartlang-debug:synthetic_debug_expression:1:6: Error: The argument type 'List<dynamic>' can't be assigned to the parameter type 'List<T>'.
   - 'List' is from 'dart:core'.
  m(id(s = []))
       ^
}
method /* from org-dartlang-debug:synthetic_debug_expression */ debugExpr(dynamic s) → dynamic
  return this.{#lib1::D::m}(this.{#lib1::D::id}<dart.core::List<#lib1::D::T%>>(invalid-expression "org-dartlang-debug:synthetic_debug_expression:1:6: Error: The argument type 'List<dynamic>' can't be assigned to the parameter type 'List<T>'.\n - 'List' is from 'dart:core'.\nm(id(s = []))\n     ^" in (s = dart.core::_GrowableList::•<dynamic>(0)) as{TypeError} Never){(dart.core::List<#lib1::D::T%>) → dart.core::List<#lib1::D::T%>}){(dart.core::List<#lib1::D::T%>) → dynamic};
